--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,16 @@
-
+<!-- Loop over each object in the projects array -->
+{{#each posts as |post| }}
+<div class="row mb-4 project">
+  <div class="col-md-5">
+    <h2>
+      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
+      
+      <a href="/posts/{{post.id}}">{{post.title}}</a>
+    </h2>
+    <p>
+     {{post.description}}
+    </p>
+    {{!-- <p>Created by {{post.user.name}} on {{format_date project.date_created}}</p> --}}
+  </div>
+</div>
+{{/each}}
