--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,7 +10,7 @@
     <p>
      {{post.description}}
     </p>
-    {{!-- <p>Created by {{post.user.name}} on {{format_date project.date_created}}</p> --}}
+    <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
   </div>
 </div>
 {{/each}}
