--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,8 +14,8 @@
         <input class="form-input" type="text" id="post-title" name="post-title" />
       </div>
       <div class="form-group">
-        <label for="post-desc">Description:</label>
-        <textarea class="form-input" id="post-desc" name="post-desc"></textarea>
+        <label for="post-description">Description:</label>
+        <textarea class="form-input" id="post-description" name="post-description"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
@@ -23,22 +23,25 @@
     </form>
   </div>
 
-  {{#if posts.length}}
-  <div class="col-md-6 project-list">
+  
+  <div class="col-md-6 post-list">
     <h3>Current Posts:</h3>
 
-    {{#each posts as |post|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/post/{{post.id}}">{{post.title}}</a></h4>
+    {{#if posts.length}}
+
+      {{#each posts as |post|}}
+      <div class="row mb-2">
+        <div class="col-md-8">
+          <h4><a href="/posts/{{post.id}}">{{post.title}}</a></h4>
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
+        </div>
       </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
-      </div>
-    </div>
-    {{/each}}
+      {{/each}}
+  
+    {{/if}}
   </div>
-  {{/if}}
 </div>
 
 <script src="./js/profile.js"></script>
