--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -24,17 +24,20 @@
   </div>
 
   
-  <div class="col-md-6 post-list">
+  <div class="col-md-6">
     <h3>Current Posts:</h3>
 
     {{#if posts.length}}
 
       {{#each posts as |post|}}
       <div class="row mb-2">
-        <div class="col-md-8">
+        <div class="col-md-6">
           <h4><a href="/posts/{{post.id}}">{{post.title}}</a></h4>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3" id="update_button">
+          <button class="btn btn-sm btn-warning" data-id="{{post.id}}">UPDATE</button>
+        </div>
+        <div class="col-md-3" id="delete_button">
           <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
         </div>
       </div>
