--- a/views/posts.handlebars
+++ b/views/posts.handlebars
@@ -3,6 +3,10 @@
   <p>{{description}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
-    <button class="btn btn-primary">Reply to this post!</button>
+    <button class="btn btn-primary" id="reply_button" data-id="{{post.id}}">Reply to this post!</button>
   </p>
 </div>
+
+
+
+<script src="./js/post.js"></script>
